--- a/index.html
+++ b/index.html
@@ -659,14 +659,14 @@
                     <div class="cover-image-container">
                         <div class="cover-placeholder" id="cover-placeholder">
                             <p>📷</p>
-                            <p>點擊下方按鈕上傳青卿圖片</p>
+                            <p>點擊下方按鈕上傳封面圖片</p>
                         </div>
-                        <img id="cover-image" class="cover-image" alt="青卿圖片">
+                        <img id="cover-image" class="cover-image" alt="封面圖片">
                         <div class="cover-text">To my love</div>
                     </div>
                     <input type="file" id="cover-upload" accept="image/*" style="display: none;" onchange="uploadCoverImage(this)">
                     <button class="upload-cover-btn" onclick="document.getElementById('cover-upload').click()">
-                        📷 上傳青卿圖片
+                        📷 上傳封面圖片
                     </button>
                 </div>
             </div>
@@ -1151,4 +1151,5 @@ window.onload = function() {
     </script>
 </body>
 </html>
+
 
